# junons-keyboard

./: #auto_saved_files#  .gitignore  MCU.kicad_sch  fp-lib-table  junon-kb.bak  junon-kb.csv  junon-kb.kicad_pcb  junon-kb.kicad_prl  junon-kb.kicad_pro  junon-kb.kicad_sch  junon-kb.kicad_sym  junon-kb.xml  switches.kicad_sch  sym-lib-table  trrs.kicad_sch  usb.kicad_sch
firmware/: Cargo.toml  Makefile  memory.x  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs
gerbers/: junon-kb-B_Cu.gbl  junon-kb-B_Mask.gbs  junon-kb-B_Paste.gbp  junon-kb-B_Silkscreen.gbo  junon-kb-Edge_Cuts.gm1  junon-kb-F_Cu.gtl  junon-kb-F_Mask.gts  junon-kb-F_Paste.gtp  junon-kb-F_Silkscreen.gto  junon-kb-NPTH-drl_map.gbr  junon-kb-NPTH.drl  junon-kb-PTH-drl_map.gbr  junon-kb-PTH.drl
junon-kb.pretty/: 632723300011.kicad_mod  BLM18EG121SH1D.kicad_mod  CAPC1005X33N.kicad_mod  CAP_0603G_AVX-L.kicad_mod  CAP_0603G_AVX-M.kicad_mod  CAP_0603G_AVX.kicad_mod  CAP_CL21_SAM-L.kicad_mod  CAP_CL21_SAM-M.kicad_mod  CAP_CL21_SAM.kicad_mod  CDBU-L.kicad_mod  CDBU-M.kicad_mod  CDBU.kicad_mod  CONN_632723x0001_WRE.kicad_mod  CRYSTAL_ABMM2_ABR-L.kicad_mod  CRYSTAL_ABMM2_ABR-M.kicad_mod  CRYSTAL_ABMM2_ABR.kicad_mod  DIOM5227X250N.kicad_mod  ECS3225MV320BNTR.kicad_mod  LQFP100-14x14mm.kicad_mod  LQFP48-7x7mm.kicad_mod  RESET-2P-EDGE.kicad_mod  RES_0603_1P6XP8_PAN-L.kicad_mod  RES_0603_1P6XP8_PAN-M.kicad_mod  RES_0603_1P6XP8_PAN.kicad_mod  RES_ERJUP3_PAN-L.kicad_mod  RES_ERJUP3_PAN-M.kicad_mod  RES_ERJUP3_PAN.kicad_mod  RES_RK73H1E_KOA-L.kicad_mod  RES_RK73H1E_KOA-M.kicad_mod  (+12 more)
(+16 files in other folders)
